--- a/profile/index.html
+++ b/profile/index.html
@@ -57,10 +57,9 @@
         </section>
         
       </section>
+      <header>Refer my materials and learnings on <a href="https://github.com/Shriniwas18K/Course-Materials/">Github</a></header>
     </section>
-    <section id="socials">
-      
-    </section>
+   
   </section>
   <script type="module" src="/main.js"></script>
 </body>
