--- a/profile/index.html
+++ b/profile/index.html
@@ -55,7 +55,12 @@
           <p>Dynamic three-dimensional visualization of disc with adjustable speed controls</p>
           <a href="https://torus.vercel.app"><button>Visit</button></a>
         </section>
-        
+
+        <section class="card">
+          <h1>Rust Detection</h1>
+          <p>GUI interface to set parameter values and detection of rust in industry.Can be deployed on IOT devices and operated manually</p>
+          <a href="https://github.com/Shriniwas18K/Mini-Projects/tree/main/rust_detection_computer_vision"><button>Visit</button></a>
+        </section>
       </section>
       <header>Refer my materials and learnings on <a href="https://github.com/Shriniwas18K/Course-Materials/">Github</a></header>
     </section>
